# genetic-algorithm

./: CMakeLists.txt  combinator.h  evaluator.h  float_gene_map.h  individual.cpp  individual.h  population.cpp  population.h  rng.cpp  rng.h
graphing/: GraphModal.cpp  GraphModal.h  SDLPolling.cpp  SDLPolling.h
tests/: count_ones.cpp  float_test.cpp  test_rng.cpp
